mn-web/src/main/groovy/com/example/transport/errors/NotImplementedException.groovy
package com.example.transport.errors

import groovy.transform.CompileStatic

@CompileStatic
final class NotImplementedException extends RuntimeException {
    NotImplementedException(String message) {
        super(message)
    }
}
